--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "description": "Place to practice commit",
    "main": "commitlint.config.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "postinstall": "husky install"
    },
    "repository": {
       "type": "git",
